syntax = "proto3";

package users;

option go_package = "internal/genproto/users;users";

// Define the User message
message User {
    string id = 1;
    string name = 2;
    string surname = 3;
    string email = 4;
    string password = 5;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message GetAllUserRequest {}

message GetAllUserResponse {
    repeated User user = 1;
}

message CreateUserRequest {
    string name = 1;
    string surname = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    User user = 1;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {}

// Define the User service
service UserService {
    rpc GetUser (GetUserRequest)  returns (GetUserResponse);
    rpc GetAllUser (GetAllUserRequest) returns (GetAllUserResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}
